# ticonlink-daliy-op

./: .gitignore  Untitled-1.md  config.py  data_server.py  live_market_data.json  main.py  ninjatrader_receiver.py  pyproject.toml  render.yaml  render_start.sh  requirements.txt  test.py
core/: calculator_ui.py  calculators.py  callbacks.py  data_processing.py  db.py  ib_client.py  ui_components.py  webhook.py
ninja trade/: data.cs
