[project]
name = "dailyoptions-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dash>=3.3.0",
    "dash-bootstrap-components>=2.0.4",
    "gunicorn>=23.0.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "requests>=2.32.5",
    "websocket-client>=1.9.0",
    "websockets>=15.0.1",
]
